@@ -10,12 +10,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>fast-decimal-vector</artifactId>
-    <name>Fast Decimal Vector</name>
-    <description>Vector implementation for the FastDecimal library</description>
-    <properties>
-        <maven.compiler.release>26</maven.compiler.release>
-    </properties>
+    <artifactId>fast-decimal-valuetype</artifactId>
+    <name>Fast Decimal Value Type</name>
+    <description>Value type (Project Valhalla) implementation for the FastDecimal library</description>
 
     <dependencies>
         <dependency>
@@ -28,27 +25,22 @@
 
     <build>
         <plugins>
-            <!-- Configure compiler to enable Vector API -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>--add-modules=jdk.incubator.vector</arg>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
-
-            <!-- Configure Surefire to enable Vector API for tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--add-modules=jdk.incubator.vector --enable-preview</argLine>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
-            <!-- Other plugins are inherited from parent -->
         </plugins>
     </build>
 </project>
